[project]
name = "minesweeper-solver-14"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "udon1206", email = "udon120622@gmail.com" }
]
dependencies = [
    "ortools>=9.10.4067",
    "pydantic>=2.8.2",
    "fastapi[standard]>=0.112.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minesweeper_solver_14"]

[tool.rye.scripts]
solve = "rye run python src/minesweeper_solver_14/main.py"
serve = "rye run uvicorn app.main:app --reload"
lint = { chain = ["lint:black", "lint:ruff", "lint:mypy" ] }
"lint:black" = "rye run black ."
"lint:mypy" = "rye run mypy --strict src/"
"lint:ruff" = "rye run ruff check src/"
